--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 body {
     margin: 0;
-    padding: 0;
+    text-align: center;
 }
-h1 {
-    color: red;
+header {
+    background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg);
+    background-size: cover;
+    color: white;  
+    padding: 50px 0px;
+
 }
-p {
-    background-color: aqua;
-    color: brown;
+.container {
+    max-width: 800px;
+    margin: auto;
+    border: solid 1px red;
 }
