--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ header {
     background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg);
     background-size: cover;
     color: white;  
-    padding: 50px 0px;
+    padding: 50px 10%;
+    box-sizing: border-box;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
 
 }
 .container {
     max-width: 800px;
-    margin: auto;
     border: solid 1px red;
 }
